--- a/lecture_day1-beginner.html
+++ b/lecture_day1-beginner.html
@@ -152,7 +152,7 @@
 
 </article></slide><slide class=''><hgroup><h2>Period of much suckiness</h2></hgroup><article  id="period-of-much-suckiness" class="smaller ">
 
-<iframe src="https://www.youtube.com/embed/8SGif63VW6E" width="420" height="315" frameborder="0" allowfullscreen=""></iframe>
+<iframe src="https://www.youtube.com/embed/8SGif63VW6E?start=252" width="420" height="315" frameborder="0" allowfullscreen=""></iframe>
 
 </article></slide><slide class=''><hgroup><h2>Period of much suckiness</h2></hgroup><article  id="period-of-much-suckiness-1" class="smaller ">
 
