--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@ div.tocify {
 </div>
 
 
+<div id="intructors" class="section level3">
+<h3>Intructors</h3>
+<p>Life Sciences Research Unit](<a href="http://wwwen.uni.lu/recherche/fstc/life_sciences_research_unit/" class="uri">http://wwwen.uni.lu/recherche/fstc/life_sciences_research_unit/</a>), University of Luxembourg</p>
+<ul>
+<li><a href="mailto:aurelien.ginolhac@uni.lu">Aurélien Ginolhac</a></li>
+<li>Eric Koncina</li>
+</ul>
+</div>
 <div id="preliminary-program" class="section level3">
 <h3>Preliminary program</h3>
 <div id="june-2nd-morning-for-complete-beginner" class="section level4">
@@ -277,6 +285,13 @@ div.tocify {
 <li>exploring the git integration in Rstudio</li>
 </ul>
 </div>
+</div>
+</div>
+<div id="practical-information" class="section level3">
+<h3>Practical information</h3>
+<div id="location" class="section level4">
+<h4>Location</h4>
+<p>Campus Belval, <a href="http://wwwfr.uni.lu/contact/campus_de_belval">Maison du Savoir</a> Room 2.220</p>
 </div>
 </div>
 
