link to install

--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@ University of Luxembourg</p>
 <li>Eric Koncina</li>
 </ul>
 </div>
+<div id="install-tutorial" class="section level3">
+<h3>Install tutorial</h3>
+<p>visit the <a href="install_tutorial.html">dedicated page</a></p>
+</div>
 <div id="preliminary-program" class="section level3">
 <h3>Preliminary program</h3>
 <div id="june-2nd-morning-for-complete-beginner" class="section level4">
