with pdf and html

--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@ University of Luxembourg</p>
 <h4>June 2nd morning, for complete beginner</h4>
 <div id="lecture-45-minutes" class="section level5">
 <h5>Lecture ~ 45 minutes</h5>
+<ul>
+<li>Slides: <a href="lecture_day1-beginner.html">online</a> and <a href="lecture_day1-beginner.pdf">pdf</a></li>
+</ul>
 </div>
 <div id="hands-on-rstudio" class="section level5">
 <h5>hands-on Rstudio</h5>
@@ -294,6 +297,47 @@ University of Luxembourg</p>
 </div>
 <div id="practical-information" class="section level3">
 <h3>Practical information</h3>
+<p>Please, do bring <strong>your laptop</strong> as no computer will be available. Everyone should have one according to the survey.</p>
+<div id="schedule" class="section level4">
+<h4>Schedule</h4>
+<table style="width:76%;">
+<colgroup>
+<col width="25%"></col>
+<col width="25%"></col>
+<col width="16%"></col>
+<col width="9%"></col>
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">Day</th>
+<th align="left">Session</th>
+<th align="left">Start</th>
+<th align="left">End</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">June 2nd</td>
+<td align="left">Beginner</td>
+<td align="left">08:30</td>
+<td align="left">12:30</td>
+</tr>
+<tr class="even">
+<td align="left">June 2nd</td>
+<td align="left">Intermediate</td>
+<td align="left">13:30</td>
+<td align="left">18:00</td>
+</tr>
+<tr class="odd">
+<td align="left">June 3rd</td>
+<td align="left">Advanced</td>
+<td align="left">08:00</td>
+<td align="left">12:15</td>
+</tr>
+</tbody>
+</table>
+<p>Hot &amp; cold drinks will be served during the morning breaks.</p>
+</div>
 <div id="location" class="section level4">
 <h4>Location</h4>
 <p>Campus Belval, <a href="http://wwwfr.uni.lu/contact/campus_de_belval">Maison du Savoir</a> in <strong>Room 2.220</strong>, second floor.</p>
