--- a/lecture_day1-beginner.html
+++ b/lecture_day1-beginner.html
@@ -230,6 +230,8 @@ is.vector(l)</pre>
 
 <pre >## [1] 1 2 3</pre>
 
+<pre class = 'prettyprint lang-r'># str(l)</pre>
+
 </article></slide><slide class=''><hgroup><h2>subsetting</h2></hgroup><article  id="subsetting" class="smaller ">
 
 <p>vector</p>
@@ -502,6 +504,14 @@ iris_melt</pre>
 ## 2  2014     2     1   low
 ## 3  2014     4    30   low</pre>
 
+</article></slide><slide class=''><hgroup><h2>Help</h2></hgroup><article  id="help" class="smaller ">
+
+<p>using <code>?</code> or <code>help()</code></p>
+
+<pre class = 'prettyprint lang-r'>?gather</pre>
+
+<p>or using the <code>Help</code> tab next to the <code>Packages</code> tab.</p>
+
 </article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Reading data </h2><h3> readr</h3></hgroup><article  id="reading-data-readr" class="smaller ">
 
 </article></slide><slide class=''><hgroup><h2>read_tsv</h2></hgroup><article  id="read_tsv" class="smaller ">
@@ -654,6 +664,7 @@ iris %&gt;%
 <li><a href='http://r4ds.had.co.nz/data-import.html' title=''>reading data</a></li>
 <li><a href='http://r4ds.had.co.nz/tidy-data.html' title=''>tidy data</a></li>
 <li><a href='http://r4ds.had.co.nz/data-visualisation.html' title=''>plotting</a></li>
+<li><a href='http://docs.ggplot2.org/current/' title=''>ggplot2 documentation</a> by Hadley / Winston</li>
 <li><a href='http://rpubs.com/hadley/ggplot2-layers' title=''>ggplot2 layer by layer</a> by Hadley</li>
 <li>Excellent ressource on <code>R</code> (in French) <a href='http://egallic.fr/Enseignement/R/m1_stat_eco_logiciel_R.pdf' title=''>Introduction to R</a> by Ewen Gallic</li>
 </ul>
