with practical in html

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@ University of Luxembourg</p>
 <div id="hands-on-rstudio" class="section level5">
 <h5>hands-on Rstudio</h5>
 <ul>
+<li><p>Practical: <a href="practical_day1-beginner.html">online</a> and <a href="practical_day1-beginner.pdf">pdf</a></p></li>
 <li>practice on a small dataset</li>
 <li>reading, specify locales and avoid factor conversions</li>
 <li>tidying data</li>
@@ -258,7 +259,7 @@ University of Luxembourg</p>
 <li>use aesthetics to map variables to columns</li>
 <li>explore the world of <code>geom_*</code></li>
 <li>faceting for 1 or 2 variables</li>
-<li>practice on normalisation of qPCR (or any) data</li>
+<li><p>practice on normalisation of qPCR (or any) data</p></li>
 </ul>
 </div>
 </div>
