--- a/practical_day1-beginner.html
+++ b/practical_day1-beginner.html
@@ -289,6 +289,9 @@ Hint
 </div>
 </div>
 
+<div class="credit">
+<a href="http://eric.koncina.eu/r/unilur/" target="_blank">unilur Rmarkdown template</a> - E. Koncina
+</div>
 
 
 
