--- a/index.html
+++ b/index.html
@@ -274,14 +274,12 @@ University of Luxembourg</p>
 <div id="microarray-hands-on" class="section level5">
 <h5>microarray hands-on</h5>
 <ul>
-<li>public dataset from GEO using <code>bioconductor</code> package</li>
-<li>tidying data, split text and unnesting cells</li>
-<li>Contrast using <code>limma</code></li>
+<li><p>Practical: <a href="practical_day1-intermediate.html">online</a></p></li>
+<li>public dataset of mRNA / mir from GEO using <code>bioconductor</code> package</li>
+<li>tidying data, split text</li>
 <li>merging annotation tables</li>
-<li>exploring histograms of p-value / adjusted-p.value</li>
-<li>viz intersection using <code>UpSetR</code>.</li>
 <li>viz comparison using heatmap and dynamic (d3) <code>heatmap</code></li>
-<li>Finding house keeping genes using linear models using <code>dplyr::do()</code></li>
+<li><p>Fit linear models to mRNA/mir expression using <code>dplyr::do()</code></p></li>
 </ul>
 </div>
 </div>
