remove useless load packages

--- a/practical_day1-intermediate.html
+++ b/practical_day1-intermediate.html
@@ -132,14 +132,11 @@ $(document).ready(function () {
 <ul>
 <li>Check if you have all those libraries installed</li>
 </ul>
-<pre class="r"><code>library(&quot;readr&quot;) # for parse_number
-library(&quot;tidyr&quot;)
-library(&quot;stringr&quot;)
+<pre class="r"><code>library(&quot;tidyr&quot;)
 library(&quot;dplyr&quot;, warn.conflicts = FALSE)
 library(&quot;ggplot2&quot;)
 library(&quot;broom&quot;)
 suppressPackageStartupMessages(library(&quot;GEOquery&quot;)) # bioconductor is verbose
-library(&quot;lubridate&quot;, warn.conflicts = FALSE)
 theme_set(theme_bw(14)) # if you wish to get this theme by default</code></pre>
 </div>
 <div id="aim" class="section level2">
