--- a/lecture_day1-intermediate.html
+++ b/lecture_day1-intermediate.html
@@ -882,6 +882,8 @@ files %&gt;%
   set_names(nm = str_match(basename(.), &quot;([^.]+)\\.[[:alnum:]]+$&quot;)[, 2]) %&gt;%
   map_df(read_excel, .id = &quot;file_name&quot;) -&gt; purr_name_df</pre>
 
+</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Appendix</h2></hgroup><article  id="appendix" class="smaller ">
+
 </article></slide><slide class=''><hgroup><h2>Coding style</h2></hgroup><article  id="coding-style" class="smaller ">
 
 <p><code>R</code> has a rather flexible and permissive syntax. However, being more strict tends to ease the debugging process.</p>
