add link to lecture3

--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@ University of Luxembourg</p>
 <div id="lecture-45-minutes" class="section level5">
 <h5>Lecture ~ 45 minutes</h5>
 <ul>
-<li>Slides: <a href="lecture_day1-beginner.html">online</a> and <a href="lecture_day1-beginner.pdf">pdf</a></li>
+<li>Slides: <a href="lecture_day1-beginner.html">online</a></li>
 </ul>
 </div>
 <div id="hands-on-rstudio" class="section level5">
 <h5>hands-on Rstudio</h5>
 <ul>
-<li><p>Practical: <a href="practical_day1-beginner.html">online</a> and <a href="practical_day1-beginner.pdf">pdf</a></p></li>
+<li><p>Practical: <a href="practical_day1-beginner.html">online</a></p></li>
 <li>practice on a small dataset</li>
 <li>reading, specify locales and avoid factor conversions</li>
 <li>tidying data</li>
@@ -287,6 +287,9 @@ University of Luxembourg</p>
 <h4>June 3rd morning, advanced user</h4>
 <div id="small-presentation-20-minutes" class="section level5">
 <h5>small presentation ~ 20 minutes</h5>
+<ul>
+<li>Slides: <a href="lecture_day2-advanced.html">online</a></li>
+</ul>
 </div>
 <div id="practical-with-yeast-data." class="section level5">
 <h5>practical with yeast data.</h5>
