--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ University of Luxembourg</p>
 <div id="lecture-45-minutes" class="section level5">
 <h5>Lecture ~ 45 minutes</h5>
 <ul>
-<li>Slides: <a href="lecture_day1-beginner.html">online</a></li>
+<li>Slides: <a href="lecture_day1-beginner.html">online</a> / <a href="lecture_day1-beginner.Rmd">Rmd</a></li>
 </ul>
 </div>
 <div id="hands-on-rstudio" class="section level5">
@@ -268,7 +268,7 @@ University of Luxembourg</p>
 <div id="small-presentation-30-minutes---dplyr" class="section level5">
 <h5>small presentation ~ 30 minutes - <code>dplyr</code></h5>
 <ul>
-<li>Slides: <a href="lecture_day1-intermediate.html">online</a></li>
+<li>Slides: <a href="lecture_day1-intermediate.html">online</a> / <a href="lecture_day1-intermediate.Rmd">Rmd</a></li>
 </ul>
 </div>
 <div id="microarray-hands-on" class="section level5">
@@ -288,8 +288,9 @@ University of Luxembourg</p>
 <div id="small-presentation-20-minutes" class="section level5">
 <h5>small presentation ~ 20 minutes</h5>
 <ul>
-<li>Slides: <a href="lecture_day2-advanced.html">online</a></li>
+<li>Slides: <a href="http://shiny-server.uni.lu/lecture-advanced">interactive shiny</a> / <a href="lecture_day2-advanced.html">html</a> / <a href="lecture_day2-advanced.Rmd">Rmd</a></li>
 </ul>
+<p>the <em>interactive</em> version is accessible only inside the university network.</p>
 </div>
 <div id="practical-with-yeast-data." class="section level5">
 <h5>practical with yeast data.</h5>
