add solutions beginnner

--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@ University of Luxembourg</p>
 <div id="hands-on-rstudio" class="section level5">
 <h5>hands-on Rstudio</h5>
 <ul>
-<li><p>Practical: <a href="practical_day1-beginner.html">online</a></p></li>
+<li>Practical: <a href="practical_day1-beginner.html">html</a> / <a href="practical_day1-beginner.pdf">pdf</a></li>
+<li><p>Practical <em>solution</em>: <a href="practical_day1-beginner_solution.html">html</a> / <a href="practical_day1-beginner_solution.pdf">pdf</a></p></li>
 <li>practice on a small dataset</li>
 <li>reading, specify locales and avoid factor conversions</li>
 <li>tidying data</li>
@@ -295,12 +296,12 @@ University of Luxembourg</p>
 <div id="practical-with-yeast-data." class="section level5">
 <h5>practical with yeast data.</h5>
 <ul>
+<li><p>Practical: <a href="practical_day2-advanced.html">online</a></p></li>
 <li>tidying data</li>
 <li>performing thousands of linear regression</li>
 <li>tidying / ranking models using functional programming using <code>purrr</code> and nested data frames</li>
 <li>animate time series using <code>gganimate</code></li>
-<li>interactive input using embedded <code>shiny</code> in <code>rmarkdown</code></li>
-<li>exploring the git integration in <code>Rstudio</code></li>
+<li><p>interactive input using embedded <code>shiny</code> in <code>rmarkdown</code></p></li>
 </ul>
 </div>
 </div>
