add solution intermediate

--- a/index.html
+++ b/index.html
@@ -259,8 +259,7 @@ University of Luxembourg</p>
 <li>introduction to the grammar of graphics</li>
 <li>use aesthetics to map variables to columns</li>
 <li>explore the world of <code>geom_*</code></li>
-<li>faceting for 1 or 2 variables</li>
-<li><p>practice on normalisation of qPCR (or any) data</p></li>
+<li><p>faceting for 1 or 2 variables</p></li>
 </ul>
 </div>
 </div>
@@ -275,11 +274,11 @@ University of Luxembourg</p>
 <div id="microarray-hands-on" class="section level5">
 <h5>microarray hands-on</h5>
 <ul>
-<li><p>Practical: <a href="practical_day1-intermediate.html">online</a></p></li>
+<li>Practical: <a href="practical_day1-intermediate.html">html</a> / <a href="practical_day1-intermediate.pdf">pdf</a></li>
+<li><p>Practical <em>solution</em>: <a href="practical_day1-intermediate_solution.html">html</a> / <a href="practical_day1-intermediate_solution.pdf">pdf</a></p></li>
 <li>public dataset of mRNA / mir from GEO using <code>bioconductor</code> package</li>
 <li>tidying data, split text</li>
 <li>merging annotation tables</li>
-<li>viz comparison using heatmap and dynamic (d3) <code>heatmap</code></li>
 <li><p>Fit linear models to mRNA/mir expression using <code>dplyr::do()</code></p></li>
 </ul>
 </div>
@@ -301,6 +300,7 @@ University of Luxembourg</p>
 <li>performing thousands of linear regression</li>
 <li>tidying / ranking models using functional programming using <code>purrr</code> and nested data frames</li>
 <li>animate time series using <code>gganimate</code></li>
+<li>viz comparison using <code>UpSetR</code></li>
 <li><p>interactive input using embedded <code>shiny</code> in <code>rmarkdown</code></p></li>
 </ul>
 </div>
