correct tidy by gather

--- a/practical_day1-beginner.html
+++ b/practical_day1-beginner.html
@@ -246,7 +246,7 @@ head(df)</code></pre>
 <div id="plot-densities-1" class="section level3">
 <h3>plot densities</h3>
 <ul>
-<li>tidy the 3 columns and plot all densities using different colours and set them translucent You will need to make a new <code>df_melt</code> data frame first.</li>
+<li>Gather (from <code>tidyr</code>) the 3 columns and plot all densities using different colours and set them translucent You will need to make a new <code>df_melt</code> data frame first.</li>
 </ul>
 <p>The 3 distributions have very different ranges.</p>
 <ul>
@@ -267,7 +267,7 @@ head(df)</code></pre>
 <li>download this compressed file: <a href="http://lsru.github.io/r_workshop/data/GSE35982.tsv.gz">GSE35982.tsv.gz</a> in your <code>data</code> folder.</li>
 <li><p>read it using <code>read_tsv()</code> and store it into a data frame named <code>gse</code>. The file will be uncompressed seamlessly.</p></li>
 <li><p>Is the file tidy?</p></li>
-<li><p>Tidy the samples. Look at the <code>gather</code> help page to select columns based on characters.</p></li>
+<li><p>Gather the samples. Look at the <code>gather</code> help page to select columns based on characters.</p></li>
 <li><p>plot the distributions as boxplots</p></li>
 <li><p>Any obvious issues? Check the file and find out what happened.</p></li>
 </ul>
