--- a/practical_day1-intermediate.html
+++ b/practical_day1-intermediate.html
@@ -151,12 +151,12 @@ theme_set(theme_bw(14)) # if you wish to get this theme by default</code></pre>
 <pre><code>## Found 2 file(s)</code></pre>
 <pre><code>## GSE35834-GPL15236_series_matrix.txt.gz</code></pre>
 <pre><code>## File stored at:</code></pre>
-<pre><code>## /var/folders/7x/14cplkhj0fn34yltb3c0j9bczm4jkt/T//RtmpWWPXND/GPL15236.soft</code></pre>
+<pre><code>## /var/folders/7x/14cplkhj0fn34yltb3c0j9bczm4jkt/T//Rtmp81b81R/GPL15236.soft</code></pre>
 <pre><code>## Warning in read.table(file = file, header = header, sep = sep, quote =
 ## quote, : not all columns named in 'colClasses' exist</code></pre>
 <pre><code>## GSE35834-GPL8786_series_matrix.txt.gz</code></pre>
 <pre><code>## File stored at:</code></pre>
-<pre><code>## /var/folders/7x/14cplkhj0fn34yltb3c0j9bczm4jkt/T//RtmpWWPXND/GPL8786.soft</code></pre>
+<pre><code>## /var/folders/7x/14cplkhj0fn34yltb3c0j9bczm4jkt/T//Rtmp81b81R/GPL8786.soft</code></pre>
 <pre><code>## Warning in read.table(file = file, header = header, sep = sep, quote =
 ## quote, : not all columns named in 'colClasses' exist</code></pre>
 <pre class="r"><code>show(gse35834)</code></pre>
@@ -213,7 +213,7 @@ theme_set(theme_bw(14)) # if you wish to get this theme by default</code></pre>
 <div id="explore-the-mir-expression-meta-data" class="section level2">
 <h2>Explore the mir expression meta-data</h2>
 <ul>
-<li>Extract as a <code>tbl_df</code> named <code>mir_meta</code> the mRNA meta-data and
+<li>Extract as a <code>tbl_df</code> named <code>mir_meta</code> the mir meta-data and
 <ul>
 <li>rename <code>geo_accession</code> to <code>sample</code></li>
 <li>select <code>source_name_ch1</code> and all columns that start with “charact”</li>
