add practical adv solution

--- a/index.html
+++ b/index.html
@@ -295,7 +295,8 @@ University of Luxembourg</p>
 <div id="practical-with-yeast-data." class="section level5">
 <h5>practical with yeast data.</h5>
 <ul>
-<li><p>Practical: <a href="practical_day2-advanced.html">online</a></p></li>
+<li>Practical: <a href="practical_day2-advanced.html">online</a></li>
+<li><p>Practical <em>solution</em>: <a href="practical_day2-advanced_solution.html">online</a></p></li>
 <li>tidying data</li>
 <li>performing thousands of linear regression</li>
 <li>tidying / ranking models using functional programming using <code>purrr</code> and nested data frames</li>
