--- a/lecture_day1-beginner.html
+++ b/lecture_day1-beginner.html
@@ -106,7 +106,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2nd June 2016</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2<sup>nd</sup> June 2016</p>
           </hgroup>
   </slide>
 
