--- a/lecture_day1-intermediate.html
+++ b/lecture_day1-intermediate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>R workshop</title>
+  <title>R hadley workshop</title>
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,7 +25,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'R workshop',
+                title: 'R ‘hadley’ workshop',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -106,7 +106,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2nd June 2016</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2<sup>nd</sup> June 2016</p>
           </hgroup>
   </slide>
 
